--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>DesktopApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Windows 7</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="Author" content="Ali Ijaz" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/images/windows-7-icon.png"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
